<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kuka_controllers</name>
  <version>0.0.0</version>
  <description>Controller for managing the timing of the FRI hardware interface</description>

  <maintainer email="svastits.aron@gmail.com">Aron Svastits</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>controller_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>std_msgs</depend>
  <depend>kuka_sunrise_interfaces</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
