<?xml version="1.0"?>
<package format="2">
  <name>kuka_drivers</name>
  <version>1.0.0</version>
  <description>ROS2 drivers for KUKA robots</description>
  <maintainer email="svastits1@gmail.com">Aron Svastits</maintainer>
  <maintainer email="kovacsge.work@gmail.com">Gergely Kovacs</maintainer>
  <maintainer email="sanyi.komaromi@gmail.com">Sandor Komaromi</maintainer>
  <maintainer email="pasztor.kristof.kp@gmail.com">Kristof Matyas Pasztor</maintainer>
  <maintainer email="pepo.tamas@gmail.com">Tamas Pepo</maintainer>
  <license>Apache-2.0</license>

  <url type="bugtracker">https://github.com/kroshu/kuka_drivers/issues</url>
  <url type="repository">https://github.com/kroshu/kuka_drivers</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>kuka_driver_interfaces</exec_depend>
  <exec_depend>kuka_drivers_core</exec_depend>
  <exec_depend>kuka_rsi_driver</exec_depend>
  <exec_depend>kuka_rsi_simulator</exec_depend>
  <!-- Controllers metapackage -->
  <exec_depend>kuka_controllers</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
