<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kuka_iiqka_eac_driver</name>
  <version>0.0.0</version>
  <description>A ROS2 hardware interface for use with KUKA iiQKA OS</description>
  <maintainer email="svastits1@gmail.com">Aron Svastits</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>sensor_msgs</depend>
  <depend>kuka_drivers_core</depend>
  <depend>tinyxml_vendor</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>

  <depend>yaml-cpp</depend>
  <depend>protobuf-dev</depend>
  <depend>libnanopb-dev</depend>
  <depend>libgrpc</depend>

  <exec_depend>kuka_lbr_iisy_support</exec_depend>
  <exec_depend>ros2_control</exec_depend>
  <exec_depend>ros2_controllers</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
